# rmusicbot

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml
src/: main.rs
src/commands/: help.rs  utils.rs
src/commands/music/: clear.rs  current.rs  leave.rs  mod.rs  nowplaying.rs  pause.rs  play.rs  resume.rs  skip.rs  stop.rs
