[package]
name = "rmusicbot"
version = "0.1.0"
authors = ["Achim Winter"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.22"}
dotenv = { version = "0.15.0", optional = true } 
serenity = { version = "0.12.0", features = ["client", "standard_framework", "voice", "cache"]}
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
songbird = { version = "0.4.0", features = ["builtin-queue", "serenity"] }
lazy_static = "1.4.0"
timeago = "0.4.2"
regex = "1.10.2"

[features]
default = ["development"]
development = ["dotenv"]