[package]
name = "rmusicbot"
version = "0.1.0"
authors = ["Achim Winter"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12" }
dotenv = { version = "0.15.0", optional = true } 
serenity = { version = "0.12.5", features = ["client", "standard_framework", "voice", "cache"] }
tokio = { version = "1.50", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
songbird = { git = "https://github.com/beerpsi-forks/songbird", branch = "davey", features = ["driver", "serenity", "rustls", "receive", "builtin-queue"] }
symphonia = { version = "0.5.5", default-features = false, features = ["all"] }
lazy_static = "1.5"
timeago = "0.4"
regex = "1.12"

[features]
default = ["development"]
development = ["dotenv"]